--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,10 @@
 @media all and (max-width: 1000px) {
-  
+  .long{
+    display: none;
+  }
+  .short{
+    display: inline-block;
+  }
 }
 
 /* Untuk Smartphone */
